--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    //implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 
     //NavegationComponent
     implementation("androidx.navigation:navigation-fragment-ktx:2.3.5")
@@ -52,6 +52,9 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    //MotionLayout
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
